# Sudoku

./: .gitignore  README.md  docker-compose.yml  index.html  login.css  login.html  pyproject.toml  script.js  signup.css  signup.html  style.css
backend/: Dockerfile
backend/app/: main.py
backend/app/Services/: auth.py
backend/app/db/: database.py
backend/app/routers/: User.py
backend/app/routers/auth/: google_auth.py  validators.py
frontend/: Dockerfile  index.html  login.html  signup.html
frontend/scripts/: script.js  signup.js
frontend/styles/: signup.css  style.css
